--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SkiDay</string>
+    <string name="menu_timeline">Timeline</string>
+    <string name="menu_ranking">Ranking</string>
+    <string name="menu_social">Social</string>
 </resources>
